--- a/webpage/css/after.css
+++ b/webpage/css/after.css
@@ -4,7 +4,7 @@ a{text-decoration: none;}
 li{list-style: none;}
 i,em{font-style: normal;}
 b,strong{font-weight: normal;}
-img{border: none;display: block;}
+img{border: none;}
 h1,h2,h3,h4,h5,h6{font-size:18px;font-weight:normal;}
 /*======================公共样式设置上=========================*/
 .left{float:left}
@@ -46,13 +46,16 @@ h1,h2,h3,h4,h5,h6{font-size:18px;font-weight:normal;}
     height: 82px;
  	}
 .logo-nav ul li a {
-    text-align: center;
+   text-align: center;
     height: 67px;
     width: 82px;
     padding-top: 8px;
     display: block;
     text-decoration: none;
     color: #FFF;
+    }
+.logo-nav ul li a:hover {
+   background: #404040;
  	}
 .logo-nav ul li a img {
     margin: auto;
@@ -65,26 +68,83 @@ h1,h2,h3,h4,h5,h6{font-size:18px;font-weight:normal;}
     font-size: 12px;
 }
  .logo-nav ul li .last span{
-      color: #ff0;
-    width: 84px;
+    color: #ff0;
+   text-align: center;
     font-weight: bold;
 }
  	
 
 /*==========================nav========================*/
 #nav{
+    padding-left: 18px;
 	background: #575757;
     height: 41px;
     border-bottom: 1px solid #212121;
 }
+#nav ul li{
+    font: 12px Microsoft Yahei, "sans-serif", "Arial", "Verdana";
+    float: left;
+    display: block;
+    height: 41px;
+    line-height: 41px;
+    position: relative;
+    }
+#nav ul li a:hover{
+background: #454545;
+}
+#nav ul li a{
+    /*line-height: 41px;*/
+    float: left;
+    color: #FFF;
+    padding: 0px 12px;
+    display: block;
+    text-decoration: none;
+    }
+#nav ul li a span{
+  margin-left: 6.5px;
+    }
+#nav ul li a img{
+    width: 17px;
+    height: 18px;
+    display:inline-block;
+    vertical-align: middle;
+    border: none;
+    margin-right: 0;
+    }
+#nav ul li .border-right{
+    height: 13px;
+    width: 0px;
+    border-right: 1px solid #656565;
+    margin-top: 15px;
+    _margin-top: 0px;
+    border-left: 1px solid #303030;
+    display: inline-block;
+}
+.number {
+    width: 32px;
+    height: 16px;
+    background: url(../img/number.png) no-repeat scroll;
+    display: inline-block;
+    line-height: 16px;
+    vertical-align: middle;
+    text-align: center;
+}
+#nav ul li a .other{
+  margin-left:0;
+    }
 
 
 /*==========================content=======================*/
-#content{
-	height:px;
+.content{
+    width: 100%;
 }
-#content .content{
-	width:1000px;
-	height:px;
-	background:antiquewhite;
+.content .left{
+    display: scroll;
+    width: 180px;
+    background: #f0f;
 }
+.content .right{
+	float:right;
+    background: #f00;
+}
+
