--- a/my-project/views/login.ejs
+++ b/my-project/views/login.ejs
@@ -1,64 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>登录页面</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<script type="text/javascript" src="/js/jquery.min.js"></script>
-</head>
-<body>
-			<div class="box">
-				<div class="logo">
-					<img src="img/logo.png" alt="商创网络">
+
+	<head>
+		<meta charset="UTF-8">
+		<title>登录页面</title>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script type="text/javascript" src="/js/jquery.min.js"></script>
+	</head>
+
+	<body>
+		<div class="box">
+			<div class="logo">
+				<img src="img/logo.png" alt="商创网络">
+			</div>
+			<div class="content">
+				<div class="top">
+					<div><img src="img/ecshop-logo.png"></div>
 				</div>
-				<div class="content">
-					<div class="top">
-						<div><img src="img/ecshop-logo.png" ></div>
-					</div>
-					<div class="form">
-						<div class="tab">
-							<h3 class="h3 hh3"></h3>
-							<div class="fdiv first">
-								<i class="iconfont iconuse">&#xe62a;</i>
-								<input type="text" id="username" name="username" placeholder="用户名">
-							</div>
-							<div class="fdiv senden">
-								<i class="iconfont">&#xe679;</i>
-								<input type="password" id="psw" name="password" placeholder="密码">
-							</div>
+				<div class="form">
+					<div class="tab">
+						<h3 class="h3 hh3"></h3>
+						<div class="fdiv first">
+							<i class="iconfont iconuse">&#xe62a;</i>
+							<input type="text" id="username" name="username" placeholder="用户名">
+						</div>
+						<div class="fdiv senden">
+							<i class="iconfont">&#xe679;</i>
+							<input type="password" id="psw" name="password" placeholder="密码">
+						</div>
 
-
-
-							<div class="fdiv thired">
-								<i class="iconfont">&#xe615;</i>
-								<input type="text" name="captcha" class="capital" placeholder="验证码">
-								<img src="img/3DJB.png">
-							</div>
-							<button onclick="login()" class="btn">登录</button>
-							<div class="controls bside" style="border: none">
-          <input type="checkbox" value="1" name="remember" id="remember">
-          <label for="remember">保存登录信息</label>
-          	<a class="link-forget cl-link-blue" href="get_password.php?act=forget_pwd">忘记密码?</a>
-         	<a class="link-home cl-link-blue" href="../">去店铺首页&gt;&gt;</a>
-        </div>
+						<div class="fdiv thired">
+							<i class="iconfont">&#xe615;</i>
+							<input type="text" name="captcha" class="capital" placeholder="验证码">
+							<img src="img/3DJB.png">
+						</div>
+						<button onclick="login()" class="btn">登录</button>
+						<div class="controls bside" style="border: none">
+							<input type="checkbox" value="1" name="remember" id="remember">
+							<label for="remember">保存登录信息</label>
+							<a class="link-forget cl-link-blue" href="get_password.php?act=forget_pwd">忘记密码?</a>
+							<a class="link-home cl-link-blue" href="../">去店铺首页&gt;&gt;</a>
 						</div>
 					</div>
 				</div>
 			</div>
+		</div>
 	</body>
-<script type="text/javascript">
-	function login() {
-		$.ajax({
-			url: "/api/login",
-			type: "post",
-			data: {
-				username: $("#username").val(),
-				psw: $("#psw").val()
-			},
-			success: function(res) {
-				console.log(res);
-			}
-		})
-	}
-</script>
+	<script type="text/javascript">
+		function login() {
+			$.ajax({
+				url: "/api/login",
+				type: "post",
+				data: {
+					username: $("#username").val(),
+					psw: $("#psw").val()
+				},
+				success: function(res) {
+					console.log(res);
+
+					if(res.status == 1) {
+						location.href = "/after";
+					} else {
+						alert(res.message);
+					}
+				}
+			})
+		}
+	</script>
+
 </html>
