--- a/my-project/public/css/content.css
+++ b/my-project/public/css/content.css
@@ -1,50 +1,150 @@
-html, body, ul, li, ol, dl, dd, dt, p, h1, h2, h3, h4, h5, h6, form,img,th,td,dl,dd,form,fieldset,legend,input,textarea,select{ margin:0; padding:0; }
-body{font-size: 12px;font-family: "微软雅黑";}
-a{text-decoration: none;}
-li{list-style: none;}
-i,em{font-style: normal;}
-b,strong{font-weight: normal;}
-img{border: none;}
-h1,h2,h3,h4,h5,h6{font-size:18px;font-weight:normal;}
+html,
+body,
+ul,
+li,
+ol,
+dl,
+dd,
+dt,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+form,
+img,
+th,
+td,
+dl,
+dd,
+form,
+fieldset,
+legend,
+input,
+textarea,
+select {
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	font-size: 12px;
+	font-family: "微软雅黑";
+}
+
+a {
+	text-decoration: none;
+}
+
+li {
+	list-style: none;
+}
+
+i,
+em {
+	font-style: normal;
+}
+
+b,
+strong {
+	font-weight: normal;
+}
+
+img {
+	border: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-size: 18px;
+	font-weight: normal;
+}
+
 #navmenu {
-    padding-left: 10px;
-    height: 34px;
-    padding-top: 0px;
-    background: #303030;
+	padding-left: 10px;
+	height: 34px;
+	padding-top: 0px;
+	background: #303030;
 }
-#navmenu span{
-    line-height: 34px;
-    font-weight: bold;
-    padding: 4px 15px 4px 18px;
-    cursor: pointer;
-    font-size: 14px;
-    font-family: "微软雅黑";
-    color: #fff;
+
+#navmenu span {
+	line-height: 34px;
+	font-weight: bold;
+	padding: 4px 15px 4px 18px;
+	cursor: pointer;
+	font-size: 14px;
+	font-family: "微软雅黑";
+	color: #fff;
 }
+
 .menu-list ul {
 	padding: 0;
-    margin: 0;
-    list-style-type: none;
-    color: #335B64;
+	margin: 0;
+	list-style-type: none;
+	color: #335B64;
 }
+
 .menu-list ul ul {
-	/*display: none;*/
+	display: none;
 }
+
 .menu-list ul li {
 	display: block;
-    border-top: #7f7f7f 1px solid;
-    width: 100%;
-    color: #FFF;
-    line-height: 42px;
-    text-align: left;
+	width: 100%;
+	color: #FFF;
+	line-height: 42px;
+	text-align: left;
 	text-indent: 40px;
 	width: 100%;
 	padding: 0;
-    margin: 0;
-    list-style-type: none;
-    color: #fff;
+	margin: 0;
+	list-style-type: none;
+	color: #fff;
 }
-.menu-list ul .hbj1{
-    background:url(../img/menulist1.png) 9px 0px no-repeat #575757;
 
+.menu-list ul .menu-item {
+	line-height: 30px;
+}
+
+.menu-list ul .menu-item:hover {
+	background: #797979;
+}
+
+.hbj1 ul {
+	/*display:none;*/
+}
+
+.menu-list ul .hbj1 {
+	background: url(../img/menulist1.png) 9px 0px no-repeat #575757;
+}
+
+.menu-list ul .hbj2 {
+	background: url(../img/menulist2.png) 9px 0 no-repeat #454545;
+}
+
+.menu-item {
+	font-size: 12px;
+	height: 30px;
+	line-height: 30px;
+	display: block;
+	font-weight: normal;
+	background: #575757;
+}
+
+.menu-item a {
+	font-size: 12px;
+	height: 30px;
+	line-height: 30px;
+	display: block;
+	color: #d7d7d7;
+}
+
+.border-top {
+	border-top: #7f7f7f 1px solid;
 }
