--- a/my-project/views/shoptab.ejs
+++ b/my-project/views/shoptab.ejs
@@ -27,8 +27,9 @@
 		</span>
 	</h1>
 		<div class="tab-div">
+			<h1><%=numbers%></h1>
 			<div class="find">
-				<form action="javascript:searchGoods()" name="searchForm">
+				<form  >
 					<img src="img/sousuo.gif" width="26" height="22" border="0" class="left sousuo">
 					<!-- 分类 -->
 					<select name="cat_id">
@@ -727,8 +728,8 @@
 						<option value="0">下架</option>
 					</select>
 					<!-- 关键字 -->
-					关键字 <input type="text" name="keyword" size="15">
-					<input type="submit" value=" 搜索 " class="button">
+					关键字 <input type="text" name="keyword" size="15" class="souname">
+					<input type="submit" value=" 搜索 " class="souso button">
 				</form>
 			</div>
 		</div>
@@ -791,7 +792,7 @@
 								<a href="#"  title="查看"><img src="img/c1.gif" width="21" height="21" border="0"></a>
 								<a href="#" title="编辑"><img src="img/c2.gif" width="21" height="21" border="0"></a>
 								<a href="#" title="复制"><img src="img/c3.gif" width="21" height="21" border="0"></a>
-								<a href="javascript:;" onclick="listTable.remove(258, '您确实要把该商品放入回收站吗？')" title="回收站"><img src="img/c4.gif" width="21" height="21" border="0"></a>
+								<a href="javascript:;" onclick="del('<%=title[i]._id%>')"><img src="img/c4.gif" width="21" height="21" border="0"></a>
 								<img src="img/c5.gif" width="21" height="21" border="0"> </td>
 							</tr>
 							<%}%>
@@ -808,10 +809,18 @@
 								<div id="turn-page">
 									总计 <span id="totalRecords">31</span> 个记录分为 <span id="totalPages">3</span> 页当前第 <span id="pageCurrent">1</span> 页，每页 <input type="text" size="3" id="pageSize" value="15" onkeypress="return listTable.changePageSize(event)">
 									<span id="page-link">
-          <a href="javascript:listTable.gotoPageFirst()">第一页</a>
-          <a href="javascript:listTable.gotoPagePrev()">上一页</a>
-          <a href="javascript:listTable.gotoPageNext()">下一页</a>
-          <a href="javascript:listTable.gotoPageLast()">最末页</a>
+          <a href="/shoptab?pageNo=1&count=<%=count%>">第一页</a>
+          <%if(pageNo >1){%>
+          <a href="/shoptab?pageNo=<%=pageNo-1%>&count=<%=count%>">上一页</a>
+          <%}%>
+             <%if(pageNo<=numbers/5){%>
+          <a href="/shoptab?pageNo=<%=pageNo+1%>&count=<%=count%>">下一页</a>
+          <%}%>
+
+           <%if(pageNo=numbers/5){%>
+          <a href="/shoptab?pageNo=<%=pageNo+1%>&count=<%=count%>">最末页</a>
+          <%}%>
+
           <select id="gotoPage" onchange="listTable.gotoPage(this.value)">
             <option value="1">1</option><option value="2">2</option><option value="3">3</option>          </select>
         </span>
@@ -1479,5 +1488,44 @@
 		<div id="footer">
 			共执行 9 个查询，用时 0.023899 秒，Gzip 已禁用，内存占用 3.590 MB<br> 版权所有 © 2005-2018 上海商派软件有限公司，并保留所有权利。</div>
 	</body>
-
+	<script type="text/javascript" src="/js/jquery.min.js"></script>
 </html>
+<script>
+	$(".souso").click(function(){
+
+		$.ajax({
+			url: "/api/shoptab",
+			type: "post",
+			data: {
+				souname: $(".souname").val()
+			},
+			success: function(res) {
+				console.log(res);
+				}
+		
+		})
+		var souname = $(".souname").val();
+		console.log("搜索中...");
+		console.log(souname);
+
+	})
+	function del(gid){
+		$.ajax({
+			url:"/api/goods_del",
+			type:"get",
+			data:{
+			gid:gid
+		},
+		success:function(res){
+			console.log(res);
+			if(res.status == 1){
+				location.reload(true)
+
+			}else{
+				alert(res.message);
+			}
+		}
+		})
+	}
+	
+</script>
